--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-stars": "^2.2.5",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
